# hamming-code-8-4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: HammingCode.h
src/: HammingCode.cpp
